<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:id="@+id/movie_item_card"
    android:background="@drawable/round_corner_card_bg">

    <ImageView
        android:id="@+id/movie_item_preview_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:background="@drawable/movie_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/screen_mask"
        app:layout_constraintDimensionRatio="166:248"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_item_age_limit_text_view"
        android:textAppearance="@style/BaseSmallTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_age_limit_bg"
        android:paddingVertical="4dp"
        android:text="@string/movie_item_age_limit"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/movie_item_preview_image_view"
        app:layout_constraintTop_toTopOf="@id/movie_item_preview_image_view" />

    <ImageView
        android:id="@+id/movie_item_like"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="6dp"
        android:gravity="center_vertical"
        android:src="@drawable/like"
        app:layout_constraintBottom_toBottomOf="@id/movie_item_age_limit_text_view"
        app:layout_constraintEnd_toEndOf="@id/movie_item_preview_image_view"
        app:layout_constraintTop_toTopOf="@id/movie_item_age_limit_text_view" />

    <TextView
        android:id="@+id/movie_item_category_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:layout_marginBottom="2dp"
        android:textAppearance="@style/Category"
        android:text="@string/movies_item_category"
        app:layout_constraintBottom_toTopOf="@id/movie_item_reviews_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/movie_item_star1"
        android:layout_width="@dimen/item_list_star_size"
        android:layout_height="@dimen/item_list_star_size"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/star_icon"
        app:tint="@color/enable_review_star_color"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_reviews_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movie_item_reviews_text_view" />

    <ImageView
        android:id="@+id/movie_item_star2"
        android:layout_width="@dimen/item_list_star_size"
        android:layout_height="@dimen/item_list_star_size"
        android:layout_marginStart="@dimen/margin_between_stars"
        app:srcCompat="@drawable/star_icon"
        app:tint="@color/enable_review_star_color"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_reviews_text_view"
        app:layout_constraintStart_toEndOf="@id/movie_item_star1"
        app:layout_constraintTop_toTopOf="@+id/movie_item_reviews_text_view" />

    <ImageView
        android:id="@+id/movie_item_star3"
        android:layout_width="@dimen/item_list_star_size"
        android:layout_height="@dimen/item_list_star_size"
        android:layout_marginStart="@dimen/margin_between_stars"
        app:srcCompat="@drawable/star_icon"
        app:tint="@color/enable_review_star_color"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_reviews_text_view"
        app:layout_constraintStart_toEndOf="@id/movie_item_star2"
        app:layout_constraintTop_toTopOf="@+id/movie_item_reviews_text_view" />

    <ImageView
        android:id="@+id/movie_item_star4"
        android:layout_width="@dimen/item_list_star_size"
        android:layout_height="@dimen/item_list_star_size"
        android:layout_marginStart="@dimen/margin_between_stars"
        app:srcCompat="@drawable/star_icon"
        app:tint="@color/enable_review_star_color"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_reviews_text_view"
        app:layout_constraintStart_toEndOf="@id/movie_item_star3"
        app:layout_constraintTop_toTopOf="@+id/movie_item_reviews_text_view" />

    <ImageView
        android:id="@+id/movie_item_star5"
        android:layout_width="@dimen/item_list_star_size"
        android:layout_height="@dimen/item_list_star_size"
        android:layout_marginStart="@dimen/margin_between_stars"
        app:srcCompat="@drawable/star_icon"
        app:tint="@color/disable_review_star_color"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_reviews_text_view"
        app:layout_constraintStart_toEndOf="@id/movie_item_star4"
        app:layout_constraintTop_toTopOf="@+id/movie_item_reviews_text_view" />

    <TextView
        android:id="@+id/movie_item_reviews_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_between_stars_and_reviews"
        android:layout_marginBottom="8dp"
        android:text="@string/movie_item_reviews"
        android:textAppearance="@style/Reviews"
        app:layout_constraintBottom_toBottomOf="@+id/movie_item_preview_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/movie_item_star5" />

    <TextView
        android:id="@+id/movie_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/avengers_end_game"
        android:textAppearance="@style/BaseMediumTextStyle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_item_preview_image_view" />

    <TextView
        android:id="@+id/moview_item_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/movie_item_duration"
        android:textAppearance="@style/Duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_item_title"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>